# ai-agent-for-blind

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  app.py  demo.py  deploy_agent.py  example.py  pyproject.toml  requirements-deploy.txt  requirements.txt  run.py  vercel.json
ai_agent/: __init__.py  cli.py
ai_agent/core/: agent.py  config.py
ai_agent/speech/: __init__.py  stt.py  tts.py
ai_agent/utils/: logger.py
ai_agent/vision/: __init__.py  image_analyzer.py
ai_agent/web/: interface.py
templates/: index.html
tests/: test_agent.py  test_config.py
