[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-for-blind"
version = "1.0.0"
description = "AI-powered assistant for blind and visually impaired users"
authors = [
    {name = "AI Agent Development Team"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Adaptive Technologies",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.3.0",
    "pyttsx3>=2.90",
    "SpeechRecognition>=3.10.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "Pillow>=10.0.1",
    "python-dotenv>=1.0.0",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.10.1",
    "flake8>=6.1.0",
]

[project.scripts]
ai-agent = "ai_agent.cli:main"

[project.urls]
Homepage = "https://github.com/sv410/ai-agent-for-blind"
Repository = "https://github.com/sv410/ai-agent-for-blind"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"